# BinPackingEnv

./: .gitignore  CMakeLists.txt  README.md
bindings/: py_binpacking.cpp
include/: BinPackingEnv.h  Box.h
python_tests/: run_episode.py  test_py_binpacking.py
src/: BinPackingEnv.cpp  Box.cpp
tests/: test_BinPackingEnv.cpp  test_add_box.cpp  test_box.cpp
